# GeomInertiaEstimator

./: .gitignore  CMakeLists.txt  package.xml
config/: quad_params.yaml
launch/: estimator.launch
src/: __init__.py  calc_EKF_F_optimized.py  calc_EKF_H_imu_optimized_simple.py  calc_EKF_H_odom_optimized_simple.py  estimator.py  estimator_header.py  geom_inertia_estimator_node.cpp.py  geom_inertia_estimator_node.py  rpm_converter.py  test.py  tools.py
